--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,7 @@ dependencies {
     //imagen circular
     implementation 'de.hdodenhof:circleimageview:3.1.0'
 
-    // recyclerView
+    // SQL
 
+    implementation'mysql:mysql-connector-java:5.1.49'
 }
